--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+    <div id="heading-parent">
+        <h1> I am a New Programmer </h1>
+
+    </div>
     <h1> I am a New Programmer </h1>
 </body>
 
