added background and design button

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 <body>
     <div id="heading-parent">
         <h1> I am a New Programmer </h1>
+        <div class="btn-parent">
+            <button class="btn">Hire me Now</button>
 
+        </div>
     </div>
-    <h1> I am a New Programmer </h1>
 </body>
 
 </html>
